[tool.poetry]
name = "py-ads"
version = "0.1.0"
description = "Python Algorithms & Data Structures Library"
authors = ["KuSi833 <kabo.milicic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
yapf = "^0.32.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true